Bring up to date with main - update kubernetes-java version - adapt to changed API - add javadocs - wrap logging where needed - version catalog - exclude some optional deps